Удаляет header в секции promo

--- a/source/index.html
+++ b/source/index.html
@@ -40,14 +40,12 @@
 
     <section class="promo">
       <div class="promo__wrapper">
-        <header class="promo__header">
-          <h2 class="heading promo__header-title">Функциональное питание для котов</h2>
+          <h2 class="heading promo__title">Функциональное питание для котов</h2>
 
-          <p class="text--large promo__header-slogan">Занялся собой? Займись котом!</p>
-          <img class="promo__header-image" src="img/promo/promo-image-mobile.png" width="280" height="270"
+          <p class="text--large promo__slogan">Занялся собой? Займись котом!</p>
+          <img class="promo__image" src="img/promo/promo-image-mobile.png" width="280" height="270"
             alt="Сытный обед для котов Cat Energy Pro с курицей (500г)">
-          <a href="form.html" class="button promo__header-button text--large">Подобрать программу</a>
-        </header>
+          <a href="form.html" class="button promo__button text--large">Подобрать программу</a>
       </div>
     </section>
   </header>
@@ -132,6 +130,8 @@
         </div>
 
         <section class="example__difference">
+          <h2 class="visually-hidden">Визуальное сравнение «до» и «после»</h2>
+
           <div class="example__difference-images-wrapper">
             <div class="example__difference-image-wrapper">
               <img class="example__difference-image" src="img/example/example-before-mobile.png" width="311"
