--- a/source/form.html
+++ b/source/form.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Подбор программы</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="logo-heading-icon page-header__logo-icon" src="img/logo/logo-mobile.svg" width="33" height="38"
         alt="Логотип Cat Energy">
     </a>
 
-    <a class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="logo-heading-image page-header__logo-heading" src="img/logo/logo-cat-energy.svg" width="101"
         height="18" alt="Cat Energy">
     </a>
@@ -139,7 +140,7 @@
           </ul>
         </fieldset>
 
-        <button class="button main-form__button text text--large" type="submit">Отправить заявку</button>
+        <button class="button button__main main-form__button" type="submit">Отправить заявку</button>
 
         <p class="main-form__tip text">* — Обязательные поля</p>
       </form>
@@ -160,7 +161,7 @@
         width="320" height="362" allowfullscreen=""></iframe>
     </section>
 
-    <a class="page-footer__logo">
+    <a href="index.html" class="page-footer__logo">
       <img class="logo-heading-image page-footer__logo-image" src="img/logo/logo-cat-energy.svg" width="128" height="24"
         alt="Cat Energy">
     </a>
