--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -26,13 +27,13 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a class="site-list__link text text--large">Главная</a>
+            <a class="site-list__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="catalog.html" class="site-list__link text text--large">Каталог продукции</a>
+            <a href="catalog.html" class="site-list__link">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html" class="site-list__link text text--large">Подбор программы</a>
+            <a href="form.html" class="site-list__link">Подбор программы</a>
           </li>
         </ul>
       </div>
@@ -40,12 +41,12 @@
 
     <section class="promo">
       <div class="promo__wrapper">
-        <h2 class="heading promo__title">Функциональное питание для котов</h2>
+        <h2 class="page-heading promo__title">Функциональное питание для котов</h2>
 
         <p class="text text--large promo__slogan">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="img/promo/promo-image-mobile.png" width="280" height="270"
           alt="Сытный обед для котов Cat Energy Pro с курицей (500г)">
-        <a href="form.html" class="button promo__button text text--large">Подобрать программу</a>
+        <a href="form.html" class="button button__main promo__button">Подобрать программу</a>
       </div>
     </section>
   </header>
@@ -63,7 +64,7 @@
             <img class="bundles__image" src="img/bundles/cat-slim.svg" width="36" height="50" alt="Сидящий худой котик">
             <p class="text bundles__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="№" class="bundles__link">Каталог Slim</a>
+            <a href="catalog.html#catalog-slim" class="bundles__link">Каталог Slim</a>
           </li>
 
           <li class="bundles__item">
@@ -72,7 +73,7 @@
               alt="Большой серьёзный хищный кот">
             <p class="text bundles__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
               поможет вашему коту нарастить необходимые мышцы!</p>
-            <a href="№" class="bundles__link">Каталог Pro</a>
+            <a href="catalog.html#catalog-pro" class="bundles__link">Каталог Pro</a>
           </li>
         </ul>
       </div>
