--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="logo-heading-icon page-header__logo-icon" src="img/logo/logo-mobile.svg" width="33" height="38"
         alt="Логотип Cat Energy">
     </a>
 
-    <a class="page-header__logo">
+    <a href="index.html" class="page-header__logo">
       <img class="logo-heading-image page-header__logo-heading" src="img/logo/logo-cat-energy.svg" width="101"
         height="18" alt="Cat Energy">
     </a>
@@ -47,7 +48,7 @@
 
       <div class="catalog__wrapper">
         <ul class="catalog__list">
-          <li class="catalog__item">
+          <li class="catalog__item" id="catalog-pro">
             <a href="#" class="catalog__item-text text text--large">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-pro-chicken-500.png" width="68" height="86"
@@ -67,7 +68,7 @@
                 <td class="catalog__item-table-data text">700 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
           <li class="catalog__item">
@@ -90,7 +91,7 @@
                 <td class="catalog__item-table-data text">1000 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
           <li class="catalog__item">
@@ -113,7 +114,7 @@
                 <td class="catalog__item-table-data text">700 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
           <li class="catalog__item">
@@ -136,10 +137,10 @@
                 <td class="catalog__item-table-data text">1000 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
-          <li class="catalog__item">
+          <li class="catalog__item" id="catalog-slim">
             <a href="#" class="catalog__item-text text text--large">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-slim-buckwheat-500.png" width="68" height="78"
@@ -159,7 +160,7 @@
                 <td class="catalog__item-table-data text">400 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
           <li class="catalog__item">
@@ -182,7 +183,7 @@
                 <td class="catalog__item-table-data text">700 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
           <li class="catalog__item">
@@ -205,7 +206,7 @@
                 <td class="catalog__item-table-data text">500 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__catalog-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__catalog-item">Заказать</a>
           </li>
 
           <li class="catalog__item catalog__item--reveal">
@@ -226,28 +227,28 @@
             <p class="extra__item-name text text--large">Сахарозаменитель</p>
             <p class="extra__item-description text">1 упаковка (100 г)</p>
             <p class="extra__item-number text">200 Р.</p>
-            <a href="#" class="button button__extra-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__extra-item">Заказать</a>
           </li>
 
           <li class="extra__item">
             <p class="extra__item-name text text--large">Питьевая вода</p>
             <p class="extra__item-description text">5 литров</p>
             <p class="extra__item-number text">50 Р.</p>
-            <a href="#" class="button button__extra-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__extra-item">Заказать</a>
           </li>
 
           <li class="extra__item">
             <p class="extra__item-name text text--large">Молоко</p>
             <p class="extra__item-description text">1 литр</p>
             <p class="extra__item-number text">100 Р.</p>
-            <a href="#" class="button button__extra-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__extra-item">Заказать</a>
           </li>
 
           <li class="extra__item">
             <p class="extra__item-name text text--large">Витамины</p>
             <p class="extra__item-description text">1 упаковка (30 г)</p>
             <p class="extra__item-number text">330 Р.</p>
-            <a href="#" class="button button__extra-item text text--large">Заказать</a>
+            <a href="#" class="button button__main button__extra-item">Заказать</a>
           </li>
         </ul>
 
@@ -272,7 +273,7 @@
         width="320" height="362" allowfullscreen=""></iframe>
     </section>
 
-    <a class="page-footer__logo">
+    <a href="index.html" class="page-footer__logo">
       <img class="logo-heading-image page-footer__logo-image" src="img/logo/logo-cat-energy.svg" width="128" height="24"
         alt="Cat Energy">
     </a>
