--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,7 +47,7 @@
       <div class="catalog__wrapper">
         <ul class="catalog__list">
           <li class="catalog__item" id="catalog-pro">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Pro 500 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-pro-chicken-500.png" width="68" height="86"
                 alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 500г">
@@ -66,11 +66,11 @@
                 <td class="catalog__item-table-data text">700 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Pro 1000 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-pro-chicken-1000.png" width="84" height="100"
                 alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 1000г">
@@ -89,11 +89,11 @@
                 <td class="catalog__item-table-data text">1000 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Pro 500 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-pro-fish-500.png" width="68" height="78"
                 alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 500г">
@@ -112,11 +112,11 @@
                 <td class="catalog__item-table-data text">700 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Pro 1000 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-pro-fish-1000.png" width="84" height="100"
                 alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 1000г">
@@ -135,11 +135,11 @@
                 <td class="catalog__item-table-data text">1000 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item" id="catalog-slim">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Slim 500 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-slim-buckwheat-500.png" width="68" height="78"
                 alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 500г">
@@ -158,11 +158,11 @@
                 <td class="catalog__item-table-data text">400 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Slim 1000 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Slim 1000 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-slim-buckwheat-1000.png" width="84" height="100"
                 alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 1000г">
@@ -181,11 +181,11 @@
                 <td class="catalog__item-table-data text">700 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item">
-            <a href="#" class="catalog__item-text text text--large">Cat Energy Slim 500 г</a>
+            <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
               <img src="img/catalog/cat-energy-slim-rice-500.png" width="72" height="84"
                 alt="Фиолетовая упаковка Cat Energy SLIM со вкусом риса на 500г">
@@ -204,13 +204,14 @@
                 <td class="catalog__item-table-data text">500 Р.</td>
               </tr>
             </table>
-            <a href="#" class="button button__main button__catalog-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="catalog__item catalog__item--reveal">
-            <p class="catalog__item-text text text--large">Показать еще 100500 товаров</p>
-            <p class="catalog__item-text text">На самом деле вкусов гораздо больше!</p>
-            <a href="#" class="button button__catalog-item button__catalog-item--reveal text text--large">Показать
+            <p class="catalog__item-text catalog__item-text--reveal">Показать еще 100500 товаров</p>
+            <p class="catalog__item-text catalog__item-text--reveal--additional text">На самом деле вкусов гораздо
+              больше!</p>
+            <a href="#" class="button catalog__item-button catalog__item-button--reveal">Показать
               все</a>
           </li>
         </ul>
@@ -223,31 +224,31 @@
       <div class="extra__wrapper">
         <ul class="extra__list">
           <li class="extra__item">
-            <p class="extra__item-name text text--large">Сахарозаменитель</p>
+            <p class="extra__item-name">Сахарозаменитель</p>
             <p class="extra__item-description text">1 упаковка (100 г)</p>
             <p class="extra__item-number text">200 Р.</p>
-            <a href="#" class="button button__main button__extra-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="extra__item">
-            <p class="extra__item-name text text--large">Питьевая вода</p>
+            <p class="extra__item-name">Питьевая вода</p>
             <p class="extra__item-description text">5 литров</p>
             <p class="extra__item-number text">50 Р.</p>
-            <a href="#" class="button button__main button__extra-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="extra__item">
-            <p class="extra__item-name text text--large">Молоко</p>
+            <p class="extra__item-name">Молоко</p>
             <p class="extra__item-description text">1 литр</p>
             <p class="extra__item-number text">100 Р.</p>
-            <a href="#" class="button button__main button__extra-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
 
           <li class="extra__item">
-            <p class="extra__item-name text text--large">Витамины</p>
+            <p class="extra__item-name">Витамины</p>
             <p class="extra__item-description text">1 упаковка (30 г)</p>
             <p class="extra__item-number text">330 Р.</p>
-            <a href="#" class="button button__main button__extra-item">Заказать</a>
+            <a href="#" class="button button__main catalog__item-button">Заказать</a>
           </li>
         </ul>
 
