--- a/source/index.html
+++ b/source/index.html
@@ -3,49 +3,52 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo page-header__logo--actual">
-      <img src="img/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
-    </a>
+    <div class="page-header__main-wrapper">
+      <a class="page-header__logo page-header__logo--actual">
+        <img src="img/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+      </a>
 
-    <a class="page-header__logo page-header__logo--actual">
-      <img src="img/logo/logo-cat-energy.svg" width="101" height="18" alt="Cat Energy">
-    </a>
+      <a class="page-header__logo page-header__logo--actual">
+        <img src="img/logo/logo-cat-energy.svg" width="101" height="18" alt="Cat Energy">
+      </a>
 
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
 
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link site-list__link--actual">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html" class="site-list__link">Каталог продукции</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html" class="site-list__link">Подбор программы</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a class="site-list__link site-list__link--actual">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html" class="site-list__link">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html" class="site-list__link">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
     <section class="promo">
-      <div class="promo__wrapper">
-        <h2 class="page-heading promo__title">Функциональное питание для котов</h2>
+      <h2 class="page-heading promo__title">Функциональное питание для котов</h2>
 
-        <p class="text promo__slogan">Занялся собой? Займись котом!</p>
+      <p class="text promo__slogan">Занялся собой? Займись котом!</p>
+      <div class="promo__image-wrapper">
         <img class="promo__image" src="img/promo/promo-image-mobile.png" width="280" height="270"
           alt="Сытный обед для котов Cat Energy Pro с курицей (500г)">
-        <a href="form.html" class="button button__main promo__button">Подобрать программу</a>
       </div>
+      <a href="form.html" class="button button__main promo__button">Подобрать программу</a>
     </section>
   </header>
 
@@ -53,107 +56,107 @@
     <h1 class="visually-hidden">Cat Energy</h1>
 
     <section class="bundles">
-      <div class="bundles__wrapper">
-        <h2 class="visually-hidden">Наборы питания</h2>
+      <h2 class="visually-hidden">Наборы питания</h2>
 
-        <ul class="bundles__list">
-          <li class="bundles__item">
-            <h3 class="heading heading--middle bundles__title">Похудение</h3>
-            <img class="bundles__image" src="img/bundles/cat-slim.svg" width="36" height="50" alt="Сидящий худой котик">
-            <p class="text bundles__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="catalog.html#catalog-slim" class="bundles__link">Каталог Slim</a>
-          </li>
+      <ul class="bundles__list">
+        <li class="bundles__item">
+          <h3 class="heading heading--middle bundles__title">Похудение</h3>
+          <img class="bundles__image" src="img/bundles/cat-slim.svg" width="36" height="50" alt="Сидящий худой котик">
+          <p class="text bundles__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="catalog.html#catalog-slim" class="bundles__link">Каталог Slim</a>
+        </li>
 
-          <li class="bundles__item">
-            <h3 class="heading heading--middle bundles__title">Набор массы</h3>
-            <img class="bundles__image" src="img/bundles/cat-pro.svg" width="67" height="28"
-              alt="Большой серьёзный хищный кот">
-            <p class="text bundles__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-              поможет вашему коту нарастить необходимые мышцы!</p>
-            <a href="catalog.html#catalog-pro" class="bundles__link">Каталог Pro</a>
-          </li>
-        </ul>
-      </div>
+        <li class="bundles__item">
+          <h3 class="heading heading--middle bundles__title">Набор массы</h3>
+          <img class="bundles__image" src="img/bundles/cat-pro.svg" width="67" height="28"
+            alt="Большой серьёзный хищный кот">
+          <p class="text bundles__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="catalog.html#catalog-pro" class="bundles__link">Каталог Pro</a>
+        </li>
+      </ul>
     </section>
 
     <section class="features">
-      <div class="features__wrapper">
-        <h2 class="visually-hidden">Список преимуществ</h2>
+      <h2 class="visually-hidden">Список преимуществ</h2>
 
-        <h3 class="heading features__title">Как это работает</h3>
+      <h3 class="heading features__title">Как это работает</h3>
 
-        <ul class="features__list">
-          <li class="features__item">
-            <p class="text features__description">Функциональное питание содержит только полезные питательные вещества.
-            </p>
-          </li>
+      <ul class="features__list">
+        <li class="features__item">
+          <p class="text features__description">Функциональное питание содержит только полезные питательные вещества.
+          </p>
+        </li>
 
-          <li class="features__item">
-            <p class="text features__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
-              готово.
-            </p>
-          </li>
+        <li class="features__item">
+          <p class="text features__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
+            готово.
+          </p>
+        </li>
 
-          <li class="features__item">
-            <p class="text features__description">Замените один-два приема обычной еды на наше функциональное питание.
-            </p>
-          </li>
+        <li class="features__item">
+          <p class="text features__description">Замените один-два приема обычной еды на наше функциональное питание.
+          </p>
+        </li>
 
-          <li class="features__item">
-            <p class="text features__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-            </p>
-          </li>
-        </ul>
-      </div>
+        <li class="features__item">
+          <p class="text features__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </p>
+        </li>
+      </ul>
     </section>
 
     <section class="example">
       <div class="example__wrapper">
         <h2 class="heading example__title">Живой пример</h2>
 
-        <p class="text example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-          Slim.
-          Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
-          часов в день. </p>
-        <div class="example__list">
-          <div class="example__item">
-            <p class="example__number">5 кг</p>
-            <p class="text example__description">Снижение веса</p>
+        <div class="example__grid-wrapper">
+          <div class="example__content-wrapper">
+            <p class="text example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+              Slim.
+              Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+              часов в день. </p>
+            <div class="example__list">
+              <div class="example__item">
+                <p class="example__number">5 кг</p>
+                <p class="text example__description">Снижение веса</p>
+              </div>
+
+              <div class="example__item">
+                <p class="example__number">60 дней</p>
+                <p class="text example__description">Затрачено времени</p>
+              </div>
+
+              <div class="example__item">
+                <p class="example__conclusion">Затраты на питание: 15 000 руб.</p>
+              </div>
+            </div>
           </div>
 
-          <div class="example__item">
-            <p class="example__number">60 дней</p>
-            <p class="text example__description">Затрачено времени</p>
-          </div>
+          <section class="example__difference">
+            <h2 class="visually-hidden">Визуальное сравнение «до» и «после»</h2>
 
-          <div class="example__item">
-            <p class="example__conclusion">Затраты на питание: 15 000 руб.</p>
-          </div>
+            <div class="example__difference-images-wrapper">
+              <div class="example__difference-image-wrapper">
+                <img class="example__difference-image" src="img/example/example-before-mobile.png" width="311"
+                  height="232" alt="Борис до похудения">
+              </div>
+
+              <div class="example__difference-image-wrapper">
+                <img class="example__difference-image" src="img/example/example-after-mobile.png" width="251"
+                  height="240" alt="Борис после похудения">
+              </div>
+            </div>
+
+            <div class="example__difference-slider">
+              <!-- Здесь будет ползунок -->
+
+              <button class="button example__difference-slider-button">Было</button>
+              <button class="button example__difference-slider-button">Стало</button>
+            </div>
+          </section>
         </div>
-
-        <section class="example__difference">
-          <h2 class="visually-hidden">Визуальное сравнение «до» и «после»</h2>
-
-          <div class="example__difference-images-wrapper">
-            <div class="example__difference-image-wrapper">
-              <img class="example__difference-image" src="img/example/example-before-mobile.png" width="311"
-                height="232" alt="Борис до похудения">
-            </div>
-
-            <div class="example__difference-image-wrapper">
-              <img class="example__difference-image" src="img/example/example-after-mobile.png" width="251" height="240"
-                alt="Борис после похудения">
-            </div>
-          </div>
-
-          <div class="example__difference-slider">
-            <!-- Здесь будет ползунок -->
-
-            <button class="button example__difference-slider-button">Было</button>
-            <button class="button example__difference-slider-button">Стало</button>
-          </div>
-        </section>
       </div>
     </section>
   </main>
@@ -163,8 +166,10 @@
       <div class="location__wrapper">
         <h2 class="visually-hidden">Как нас найти</h2>
 
-        <h3 class="heading heading--min location__title">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="text location__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="location__content-wrapper">
+          <h3 class="heading heading--min location__title">Приглашаем к сотрудничеству дилеров!</h3>
+          <p class="text location__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
       </div>
 
       <iframe class="location__map"
